2010-05-12  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Detect debug mode consistently
        https://bugs.webkit.org/show_bug.cgi?id=38863

        * JavaScriptCore.pri:
        * JavaScriptCore.pro:
        * jsc.pro:
        * qt/api/QtScript.pro:

2010-05-10  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Darin Adler.

        [Qt] Disable JIT support for mingw-w64
        https://bugs.webkit.org/show_bug.cgi?id=38747

        Disale JIT for mingw-w64 as it is reportedly
        unstable.

        Thanks for Vanboxem Rruben for the investigation.

        * wtf/Platform.h:

2010-05-06  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Enable YARR_JIT for X86 Mac for QtWebKit
        https://bugs.webkit.org/show_bug.cgi?id=38668

        * wtf/Platform.h:

2010-04-28  Simon Hausmann  <simon.hausmann@nokia.com>, Kent Hansen <kent.hansen@nokia.com>

        Reviewed by Darin Adler.

        JSC's currentThreadStackBase is not reentrant on some platforms
        https://bugs.webkit.org/show_bug.cgi?id=37195

        This function needs to be reentrant to avoid memory corruption on platforms where
        the implementation uses global variables.

        This patch adds a mutex lock where necessary and makes the Symbian implementation
        reentrant.

        * runtime/Collector.cpp:
        (JSC::currentThreadStackBaseMutex):
        (JSC::currentThreadStackBase):

2010-04-21  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Simon Hausmann.

        Compile fix for Visual Studio 2010
        https://bugs.webkit.org/show_bug.cgi?id=37867

        Patch by Prasanth Ullattil <prasanth.ullattil@nokia.com>

        * runtime/Structure.cpp:
        (JSC::Structure::transitionTableAdd):
        * wtf/MathExtras.h:
        * wtf/Platform.h:

2010-04-27  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>
